[gd_scene load_steps=3 format=3 uid="uid://buspc3xb5jkoq"]

[ext_resource type="Script" path="res://scenes/minigames/fill_formulas/fill_formulas.gd" id="1_d3uug"]
[ext_resource type="Texture2D" uid="uid://dk4rshu1db061" path="res://scenes/minigames/fill_formulas/assets/gui_elements/minigame_gui.png" id="2_mk0br"]

[node name="FillFormulas" type="Node2D"]
script = ExtResource("1_d3uug")

[node name="MinigameGui" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_mk0br")

[node name="Hint" type="RichTextLabel" parent="."]
offset_left = 896.0
offset_top = 388.0
offset_right = 1065.0
offset_bottom = 485.0
bbcode_enabled = true

[node name="FirstLetter" type="Marker2D" parent="."]
position = Vector2(267, 575)

[node name="StartOfFormula" type="Marker2D" parent="."]
position = Vector2(286, 152)
